objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>1 - Understand Business Context</fullName>
        <description>SR0 - 1 - Understand Business Context</description>
        <isActive>true</isActive>
        <values>
            <fullName>2 - Define Opportunity Portfolio</fullName>
        </values>
        <values>
            <fullName>3 - Identify %26 Qualify</fullName>
        </values>
        <values>
            <fullName>4 - Influence %26 Develop</fullName>
        </values>
        <values>
            <fullName>5 - Prepare %26 Bid</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>2 - Define Opportunity Portfolio</fullName>
        <description>SR0 - 2 - Define Opportunity Portfolio</description>
        <isActive>true</isActive>
        <values>
            <fullName>2 - Define Opportunity Portfolio</fullName>
        </values>
        <values>
            <fullName>3 - Identify %26 Qualify</fullName>
        </values>
        <values>
            <fullName>4 - Influence %26 Develop</fullName>
        </values>
        <values>
            <fullName>5 - Prepare %26 Bid</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>3 - Identify %26 Qualify</fullName>
        <description>SR0 - 3 - Identify &amp; Qualify</description>
        <isActive>true</isActive>
        <values>
            <fullName>0 - Closed</fullName>
        </values>
        <values>
            <fullName>2 - Define Opportunity Portfolio</fullName>
        </values>
        <values>
            <fullName>3 - Identify %26 Qualify</fullName>
        </values>
        <values>
            <fullName>4 - Influence %26 Develop</fullName>
        </values>
        <values>
            <fullName>5 - Prepare %26 Bid</fullName>
        </values>
        <values>
            <fullName>6 - Negotiate %26 Win</fullName>
        </values>
        <values>
            <fullName>7 - Deliver %26 Validate</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>4 - Influence %26 Develop</fullName>
        <description>SR0 - 4 - Influence &amp; Develop</description>
        <isActive>true</isActive>
        <values>
            <fullName>0 - Closed</fullName>
        </values>
        <values>
            <fullName>2 - Define Opportunity Portfolio</fullName>
        </values>
        <values>
            <fullName>3 - Identify %26 Qualify</fullName>
        </values>
        <values>
            <fullName>4 - Influence %26 Develop</fullName>
        </values>
        <values>
            <fullName>5 - Prepare %26 Bid</fullName>
        </values>
        <values>
            <fullName>6 - Negotiate %26 Win</fullName>
        </values>
        <values>
            <fullName>7 - Deliver %26 Validate</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>5 - Prepare %26 Bid</fullName>
        <description>SR0 - 5 - Prepare &amp; Bid</description>
        <isActive>true</isActive>
        <values>
            <fullName>0 - Closed</fullName>
        </values>
        <values>
            <fullName>2 - Define Opportunity Portfolio</fullName>
        </values>
        <values>
            <fullName>3 - Identify %26 Qualify</fullName>
        </values>
        <values>
            <fullName>4 - Influence %26 Develop</fullName>
        </values>
        <values>
            <fullName>5 - Prepare %26 Bid</fullName>
        </values>
        <values>
            <fullName>6 - Negotiate %26 Win</fullName>
        </values>
        <values>
            <fullName>7 - Deliver %26 Validate</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>6 - Negotiate %26 Win</fullName>
        <description>SR0 - 6 - Negotiate &amp; Win</description>
        <isActive>true</isActive>
        <values>
            <fullName>0 - Closed</fullName>
        </values>
        <values>
            <fullName>2 - Define Opportunity Portfolio</fullName>
        </values>
        <values>
            <fullName>3 - Identify %26 Qualify</fullName>
        </values>
        <values>
            <fullName>4 - Influence %26 Develop</fullName>
        </values>
        <values>
            <fullName>5 - Prepare %26 Bid</fullName>
        </values>
        <values>
            <fullName>6 - Negotiate %26 Win</fullName>
        </values>
        <values>
            <fullName>7 - Deliver %26 Validate</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>7 - Deliver %26 Validate</fullName>
        <description>SR0 - 7 - Deliver &amp; Validate</description>
        <isActive>true</isActive>
        <values>
            <fullName>0 - Closed</fullName>
        </values>
        <values>
            <fullName>2 - Define Opportunity Portfolio</fullName>
        </values>
        <values>
            <fullName>3 - Identify %26 Qualify</fullName>
        </values>
        <values>
            <fullName>4 - Influence %26 Develop</fullName>
        </values>
        <values>
            <fullName>5 - Prepare %26 Bid</fullName>
        </values>
        <values>
            <fullName>6 - Negotiate %26 Win</fullName>
        </values>
        <values>
            <fullName>7 - Deliver %26 Validate</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccountCountry__c</fullName>
        <description>SR1 - (UAT Change Request Patch) - This field will always store the Country of the Account, the Opportunity is associated with.</description>
        <label>Account Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountGrowthInitiative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Growth Initiative</label>
        <referenceTo>AccountGrowthInitiative__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActualQualification__c</fullName>
        <description>SR0 - Use in the Milestone Opportunity Section. This field is automatically populated with the Today Date when the opportunity stage is 4 - Influence &amp; Develop.</description>
        <inlineHelpText>Date when the gate S0 passed (automatically filled-in by the system)</inlineHelpText>
        <label>Actual Qualification (S0)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActualQuoteInvestDecision__c</fullName>
        <description>SR0 - Use in the Milestone Opportunity Section. This field is automatically populated with the Today Date when the opportunity stage is 5 - Propose &amp; Win.</description>
        <inlineHelpText>Date when the gate S1 passed (automatically filled-in by the system)</inlineHelpText>
        <label>Actual Quote Invest Decision (S1)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActualQuoteSubmitDecision__c</fullName>
        <description>SR0 - Use in the Milestone Opportunity Section. This field is automatically populated with the Today Date when the opportunity stage is 6 - Negociate &amp; Close.</description>
        <inlineHelpText>Date when the gate S2 passed (automatically filled-in by the system)</inlineHelpText>
        <label>Actual Quote Submit Decision (S2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>November2012-New field to be added in Custom Report Type</description>
        <formula>IF(IsClosed,  CloseDate -  DATEVALUE(CreatedDate), TODAY() - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgreementReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SR0+. SLS_FA_021</description>
        <inlineHelpText>The unique ID of the related Agreement.</inlineHelpText>
        <label>Agreement Reference</label>
        <referenceTo>OppAgreement__c</referenceTo>
        <relationshipLabel>Opportunities Linked to this Agreement</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AmountAssessment__c</fullName>
        <description>Technical field needed for reports</description>
        <formula>Amount * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>SR0</description>
        <inlineHelpText>What is the opportunity content?</inlineHelpText>
        <label>Application Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AssociatedRelationshipSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associated Relationship Suite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Line_Items__c</fullName>
        <label>Line Items</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BuildingsBSICount__c</fullName>
        <description>November2012-Count the number of Buildings BSI</description>
        <label>Buildings BSI Count</label>
        <summaryFilterItems>
            <field>BusinessSpecificInformation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Buildings</value>
        </summaryFilterItems>
        <summaryForeignKey>BusinessSpecificInformation__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BuildingsEnergySolutionsBSICount__c</fullName>
        <label>Buildings - Energy Solutions BSI Count</label>
        <summaryFilterItems>
            <field>BusinessSpecificInformation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Buildings - Energy Solutions</value>
        </summaryFilterItems>
        <summaryForeignKey>BusinessSpecificInformation__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BusinessMix__c</fullName>
        <description>SR0</description>
        <inlineHelpText>Although a given opportunity will be lead by one Business Unit, typically larger opportunities will involve the selling of products, services and solutions from multiple business units which generates the &apos;Business Mix&apos; of the opportunity.</inlineHelpText>
        <label>Business Mix</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>GW</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>SO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChannelPartnerStage__c</fullName>
        <inlineHelpText>You only need to change the Stage, the Phase/Sales stage will automatically update upon saving.</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Quote Sent</fullName>
                </value>
                <value>
                    <fullName>Closed - Won</fullName>
                </value>
                <value>
                    <fullName>Closed - Lost</fullName>
                </value>
                <value>
                    <fullName>Closed - Cancelled by Customer</fullName>
                </value>
                <value>
                    <fullName>Closed - Cancelled by Schneider Electric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChannelType__c</fullName>
        <description>SR0</description>
        <inlineHelpText>Select Direct if the Oppty Account will purchase through SE directly by giving us the Order to fulfill. Select Indirect if the Oppty Account will purchase through 3rd party like a distributor or reseller</inlineHelpText>
        <label>Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloudExtendLink__c</fullName>
        <description>November &apos;13 Release - Cloud Extend hyperlink</description>
        <formula>HYPERLINK(&quot;https://ce4sf20_001.&quot;
        &amp; RIGHT(LEFT($Api.Partner_Server_URL_90,FIND(&quot;.&quot;,$Api.Partner_Server_URL_90)-1),LEN(LEFT($Api.Partner_Server_URL_90,FIND(&quot;.&quot;,$Api.Partner_Server_URL_90)-1))-LEN(&quot;https://&quot;))
        &amp; &quot;.visual.force.com/apex/AeOpportunitySalesGuides?scontrolCaching=1&amp;id=&quot;&amp;Id,
          &quot;Opportunity Process Guides&quot;,
          &quot;_parent&quot;)
&amp; BR() &amp; BR() &amp; BR()</formula>
        <label>Guides for Efficiency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>SR0</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfidentialityLevel__c</fullName>
        <inlineHelpText>It shows the privacy level for the information recorded within the opportunity. It doesn&apos;t mean that the details will be hidden only draw attention about the confidentiality level of the data.</inlineHelpText>
        <label>Confidentiality Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Non-disclosure</fullName>
                </value>
                <value>
                    <fullName>Classified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connected_Offer__c</fullName>
        <description>BR-9891 - Q3 Release</description>
        <label>Connected Offer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_end_date__c</fullName>
        <label>Contract end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CountryOfDestination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country of Destination</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>OpptyCountry</relationshipLabel>
        <relationshipName>OpptyCountry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate2__c</fullName>
        <description>The Created Date 2 field is a column you can choose when you create an opportunity report. It does not show on the opportunity page layout. 

Currently, you cannot group by the same field twice in reports. 

The CreatedDate2 field exists as a workaround to this by presenting the same field twice. The CreatedDate and CreatedDate2 fields can then be used to group a report by the CreatedDate in two different ways. For example, in a matrix report, grouping by the Year along the columns, and grouping by the Month along the rows.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date (2)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Via_Mobile_App__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whenever a new Opportunity is created from the Mobile App, this check-box will be checked.
 It is a hidden check-box.</description>
        <label>Created Via Mobile App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creation__c</fullName>
        <description>SR0 - This field is used in the Milestones section. It is automatically filled with the opportunity creation date.</description>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date when the Quote was created in the system.</inlineHelpText>
        <label>Creation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SR0 - Allows to remind the user the Account must be selected before going to stage 5 - Propose &amp; Win</description>
        <inlineHelpText>It indicates the End User’s preferred channel. Shows that a Customer decided upon a Account with whom to continue final stage of Negotiation. If we sent the same offer to other Accounts all those opportunities will be closed at this phase.</inlineHelpText>
        <label>Account Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DataMigration_CaseNumber__c</fullName>
        <description>Created for DataMigration purpose for october release,will be deleted later</description>
        <label>DataMigration CaseNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataMigration__c</fullName>
        <defaultValue>true</defaultValue>
        <description>mark as done if this record is processed</description>
        <label>DataMigration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaysInStage__c</fullName>
        <description>SR0 - This field highlights the number of day an opportunity is in the stage.</description>
        <formula>TODAY() - TECH_StageLastChangeDate__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days In Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dayssincelastcompletedactivity__c</fullName>
        <formula>TODAY()  -  LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last completed activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DegreeofSpecification__c</fullName>
        <description>SR0 - April 2019 release</description>
        <inlineHelpText>Indicates who has influenced the customer requirements (Schneider, Competition or Open / Generic Specification)</inlineHelpText>
        <label>Project Specified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Specified by SE, No Competitive equal</fullName>
                </value>
                <value>
                    <fullName>Specified by SE, Competitive equal available</fullName>
                </value>
                <value>
                    <fullName>Specified by Competition</fullName>
                </value>
                <value>
                    <fullName>Open Specification</fullName>
                </value>
                <value>
                    <fullName>Specified at Opportunity Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeletionWarning__c</fullName>
        <description>SR0 - This field displays an image (warning message) when the To Be Deleted checkbox is ticked.</description>
        <formula>IF ( ToBeDeleted__c , IMAGE(&quot;/resource/STR001_WarningMessageOpp&quot;,&quot;&quot; ,50,250), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deletion Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery_Prescription__c</fullName>
        <description>A collection of prescriptions from Opp line prescriptions.</description>
        <label>Discovery Recommendations</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discovery_Winrate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Discovery winrate field calculated from Opportunity lines update.</description>
        <inlineHelpText>Do not fill this, the score is updated by a custom component.</inlineHelpText>
        <label>Discovery Winrate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DuplicateWith__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate with</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Duplicate with)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndOfExecution__c</fullName>
        <description>May 2012 Release - IDEA-000563</description>
        <inlineHelpText>Date when project execution is completed and gate P4 is passed (manually validated)</inlineHelpText>
        <label>End of Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndUserCustomer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SR0</description>
        <inlineHelpText>Capture the account that will be the user or receive the products. The account that will benefit and be the final user. This might be the same account from the Opportunity or might be a different account if sold through a partner or distributor as example</inlineHelpText>
        <label>End-User Account - Investor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>PRMAccount</value>
            </filterItems>
            <filterItems>
                <field>$User.BypassVR__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities as End User Account</relationshipLabel>
        <relationshipName>EndUserCustomers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinalCustSiteAcc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SR0</description>
        <inlineHelpText>Capture the Account where the product will be located or installed. This could be the same account from the Opportunity or even the end user account. In some examples you might have a different installation site.</inlineHelpText>
        <label>Final Account/Site</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>PRMAccount</value>
            </filterItems>
            <filterItems>
                <field>$User.BypassVR__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities as Final Customer/Site</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FollowUpDate__c</fullName>
        <description>July12 - Date where the oppty team should conduct a follow up with the account</description>
        <inlineHelpText>This is a date where the opportunity team should conduct a follow up with the account to determine any changes to the opportunity.</inlineHelpText>
        <label>Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gate__c</fullName>
        <description>SR0 - This field is controlling by the Stage. From stage 3 - Identify &amp; Qualify to 6 - Negotiate &amp; Close, this field is automatically populated with the appropriate stage. For stage 7 - Deliver &amp; Validate, user should select the gate (per default P0).</description>
        <label>Gate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S0</fullName>
                </value>
                <value>
                    <fullName>S1</fullName>
                </value>
                <value>
                    <fullName>S2</fullName>
                </value>
                <value>
                    <fullName>P0</fullName>
                </value>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>P3</fullName>
                </value>
                <value>
                    <fullName>P4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IBGeniusID__c</fullName>
        <description>This field is for reporting purposes on lead and opportunity</description>
        <externalId>true</externalId>
        <label>IB Genius ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITBBSICount__c</fullName>
        <label>ITB BSI Count</label>
        <summaryFilterItems>
            <field>BusinessSpecificInformation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>ITB</value>
        </summaryFilterItems>
        <summaryForeignKey>BusinessSpecificInformation__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ImportRelationshipSuite__c</fullName>
        <formula>HYPERLINK(&quot;https://www.saleswebserver.net/sfdc/RevenueStorm/importRS.asp?ID=&quot;&amp; Id &amp;&quot;&amp;SessionID=&quot;&amp; $Api.Session_ID &amp;&quot;&amp;EndPoint=&quot;&amp; $Api.Partner_Server_URL_240 &amp;&quot;&amp;AccountID=&quot;&amp; AccountId &amp;&quot;&amp;ReturnURL=$Label.CL10071&quot; &amp; &quot;/&quot; &amp; Id &amp; &quot;&amp;OptyDesc=&quot;&amp; Name&amp;&quot;AccountName=&quot; &amp; Account.Name &amp;&quot;&amp;Product=RS&quot;,&quot;Click here&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Import Relationship Suite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludedInForecast__c</fullName>
        <description>SR0</description>
        <inlineHelpText>For a given level in the opportunity hierarchy, only one opportunity can be included in the forecast and then Opportunity information will show up in forecast reports allowing management to understand and predict potential future revenue.</inlineHelpText>
        <label>Included in Forecast</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IndustryBSICount__c</fullName>
        <description>Count the number of Industry BSI records</description>
        <label>Industry BSI Count</label>
        <summaryFilterItems>
            <field>BusinessSpecificInformation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Industry - Process Automation</value>
        </summaryFilterItems>
        <summaryForeignKey>BusinessSpecificInformation__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice_Option__c</fullName>
        <description>BR-11808</description>
        <label>Billing Option</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAMultiBusinessLevel2__c</fullName>
        <description>The field checks if if at least 2 Opportunity line (line type &quot;Parent Line&quot; only, except for lines where the line status equals «To be deleted» , «Cancelled» , «Lost» ) , from different Businesses with &quot;Is a Level 2 (oppty Line) ?&quot; flag to 1 then 1, else 0.</description>
        <label>Is a multi system ?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsLateOpportunity__c</fullName>
        <description>technical field needed for reports.
If the closed date is before today, then return 1, either return 0, to be able to count the number of late opportunities vs all open opportunities.</description>
        <formula>IF(CloseDate &lt; TODAY(), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Late?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsaSolution__c</fullName>
        <description>Identifies the Opportunity as a Solution Opportunity, if the Opportunity Type is &quot;Solutions&quot; or &quot;Solutions Fast-Track&quot;</description>
        <formula>IF( ISPICKVAL( OpptyType__c , &apos;Solutions&apos;) || ISPICKVAL( OpptyType__c , &apos;Solutions Fast-Track&apos;) , &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is a Solution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsacrosssellingNewrule__c</fullName>
        <description>&quot;If at least one Opportunity line (all line types, except for lines where the line status equals «To be deleted») 
is has &quot;&quot;Is a cross selling oppty Line ?&quot;&quot; to 1, 
then 1, else 0&quot;</description>
        <formula>IF(TECH_IsACrossSellingRollUp__c &gt;0, 1, 0)</formula>
        <label>Is a cross selling ?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Keycode__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the Campaign Keycode of Lead.</description>
        <inlineHelpText>Marketing Campaign Number</inlineHelpText>
        <label>Keycode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__Is_Influenced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity was influenced by activities on LinkedIn Sales Navigator</description>
        <label>Is_Influenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>